<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity" >

  <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:orientation="vertical" >

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/welcome" />
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:text="@string/help" />
    <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical" >
      <Button
            android:id="@+id/btnTakePicture"
            android:drawableTop="@drawable/camera"
            android:paddingTop="12sp"
            android:drawablePadding="-15sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/takePicture"
            android:onClick="send">
      </Button>
    </LinearLayout>
  </LinearLayout>

</RelativeLayout>